[grasp_prediction_arc2017] Add grasp_fusion_lib & remove secondary dependencies in requirements.txt

--- a/demos/grasp_prediction_arc2017/.gitignore
+++ b/demos/grasp_prediction_arc2017/.gitignore
@@ -1,1 +1,11 @@
-../grasp_fusion/.gitignore
+*.py[cdo]
+*.so
+
+/.pytest_cache/
+/.cache/
+/*.egg-info/
+/build/
+/dist/
+
+# external modules
+/src/
