--- a/demos/grasp_prediction_arc2017/setup.cfg
+++ b/demos/grasp_prediction_arc2017/setup.cfg
@@ -1,1 +1,9 @@
-../grasp_fusion/setup.cfg
+[flake8]
+exclude = .anaconda*/, build/, src/, examples/basics/, examples/rbo_seg_apc2016/rbo_seg/, ros/image_proc_contrib/external/
+ignore = H304, E123, E731, W504
+
+[tool:pytest]
+markers =
+    httpaccess: requires http access.
+    slow: slow because of downloading or computing.
+    heavy: heavy in computing.
