--- a/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/CMakeLists.txt
+++ b/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/CMakeLists.txt
@@ -28,6 +28,7 @@ catkin_package(
 )
 
 catkin_generate_virtualenv(
+  CHECK_VENV FALSE
   EXTRA_PIP_ARGS
     -qqq  # Suppress log not to exceed maximum length in travis test
     --upgrade
