--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,12 @@ language: c++ # to avoid using /opt/python from travis
 
 # for Travis {{{
 cache:
+  apt: true
+  pip: true
   directories:
     - $HOME/.ccache
     - $HOME/.cache/pip
+    - $HOME/apt-cacher-ng
     - $HOME/.ros/data
 # }}}
 
