--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-sudo: required
-
+sudo: true
+dist: bionic
+language: python
 services:
   - docker
-
-dist: trusty
-
-language: c++ # to avoid using /opt/python from travis
-
 # for Travis {{{
 cache:
   apt: true
