--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,9 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN echo "deb http://packages.ros.org/ros-testing/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
 
-RUN apt-get update && apt-get install -y wget git
+RUN apt-get update && apt-get install -y wget git && \
+    rm -rf /var/lib/apt/lists/*
+
 RUN wget http://packages.ros.org/ros.key -O - | apt-key add -
 
 # FIXME: https://github.com/start-jsk/jsk_apc/pull/2664
@@ -15,7 +17,8 @@ RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y \
     python-rosdep \
     python-setuptools \
     python-wstool \
-    python-pip
+    python-pip && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN pip install 'pip==9.0.3' && \
     pip install 'setuptools==44.1.0'
@@ -34,7 +37,8 @@ RUN cd ~ && \
 RUN rosdep update --include-eol-distros
 
 # /opt/ros/${ROS_DISTRO}/share can be changed after rosdep install, so we run it 3 times.
-RUN for i in $(seq 3); do rosdep install --rosdistro ${ROS_DISTRO} -r -y -i --from-paths /opt/ros/${ROS_DISTRO}/share ~/ros/${ROS_DISTRO}/src; done
+RUN for i in $(seq 3); do rosdep install --rosdistro ${ROS_DISTRO} -r -y -i --from-paths /opt/ros/${ROS_DISTRO}/share ~/ros/${ROS_DISTRO}/src; done && \
+    rm -rf /var/lib/apt/lists/*
 
 ARG TESTING
 ARG ROS_DISTRO
