--- a/demos/grasp_fusion/ros/grasp_fusion/package.xml
+++ b/demos/grasp_fusion/ros/grasp_fusion/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>grasp_fusion</name>
   <version>4.3.0</version>
   <description>Predict and execute simultaneous suction and pinch.</description>
@@ -14,12 +14,15 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>catkin_virtualenv</build_depend>
-  <build_depend>python-gdown-pip</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION==2">python-gdown-pip</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION==3">python3-gdown-pip</build_depend>
 
-  <run_depend>jsk_arc2017_baxter</run_depend>
-  <run_depend>jsk_pcl_ros_utils</run_depend>
-  <run_depend>jsk_perception</run_depend>
-  <run_depend>python-tk</run_depend>  <!-- For 'import matplotlib.pyplot' -->
+  <exec_depend>jsk_arc2017_baxter</exec_depend>
+  <exec_depend>jsk_pcl_ros_utils</exec_depend>
+  <exec_depend>jsk_perception</exec_depend>
+  <!-- For 'import matplotlib.pyplot' -->
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-tk</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-tk</exec_depend>
 
   <test_depend>roslint</test_depend>
 
