--- a/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/package.xml
+++ b/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>grasp_prediction_arc2017</name>
   <version>4.3.0</version>
   <description>Grasp prediction for ARC2017.</description>
@@ -15,22 +15,24 @@
 
   <build_depend>catkin_virtualenv</build_depend>
   <build_depend>grasp_fusion</build_depend>
-  <build_depend>python-gdown-pip</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION==2">python-gdown-pip</build_depend>
+  <build_depend condition="$ROS_PYTHON_VERSION==3">python3-gdown-pip</build_depend>
 
-  <run_depend>grasp_fusion</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>image_view</run_depend>
-  <run_depend>jsk_arc2017_baxter</run_depend>
-  <run_depend>jsk_perception</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>openni2_launch</run_depend>
-  <run_depend>python-chainer-pip</run_depend>
-  <run_depend>rqt_gui</run_depend>
-  <run_depend>rosbag</run_depend>
-  <run_depend>rviz</run_depend>
-  <run_depend>sphand_driver</run_depend>
-  <run_depend>stereo_image_proc</run_depend>
-  <run_depend>tf</run_depend>
+  <exec_depend>grasp_fusion</exec_depend>
+  <exec_depend>image_transport</exec_depend>
+  <exec_depend>image_view</exec_depend>
+  <exec_depend>jsk_arc2017_baxter</exec_depend>
+  <exec_depend>jsk_perception</exec_depend>
+  <exec_depend>nodelet</exec_depend>
+  <exec_depend>openni2_launch</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-chainer-pip</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-chainer-pip</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rosbag</exec_depend>
+  <exec_depend>rviz</exec_depend>
+  <exec_depend>sphand_driver</exec_depend>
+  <exec_depend>stereo_image_proc</exec_depend>
+  <exec_depend>tf</exec_depend>
 
   <test_depend>jsk_apc2016_common</test_depend>
   <test_depend>jsk_tools</test_depend>
