--- a/demos/instance_occlsegm/ros/instance_occlsegm/package.xml
+++ b/demos/instance_occlsegm/ros/instance_occlsegm/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>instance_occlsegm</name>
   <version>4.3.0</version>
   <description>Learning Instance Occlusion Segmentation.</description>
@@ -15,8 +15,10 @@
 
   <build_depend>catkin_virtualenv</build_depend>
 
-  <run_depend>python-tk</run_depend>  <!-- For 'import matplotlib.pyplot' -->
-  <run_depend>synthetic2d</run_depend>
+  <!-- For 'import matplotlib.pyplot' -->
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-tk</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-tk</exec_depend>
+  <exec_depend>synthetic2d</exec_depend>
 
   <export>
     <pip_requirements>requirements.txt</pip_requirements>
