--- a/demos/selective_dualarm_grasping/package.xml
+++ b/demos/selective_dualarm_grasping/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>dualarm_grasping</name>
   <version>4.3.0</version>
   <description>The dualarm_grasping package</description>
@@ -14,18 +14,20 @@
   <build_depend>jsk_recognition_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
-  <run_depend>message_runtime</run_depend>
-  <run_depend>python-chainer-pip</run_depend>
-  <run_depend>python-fcn-pip</run_depend>
-  <run_depend>jsk_2015_05_baxter_apc</run_depend>
-  <run_depend>jsk_2016_01_baxter_apc</run_depend>
-  <run_depend>jsk_arc2017_baxter</run_depend>
-  <run_depend>jsk_arc2017_common</run_depend>
-  <run_depend>jsk_data</run_depend>
-  <run_depend>jsk_recognition_msgs</run_depend>
-  <run_depend>roseus_smach</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>xacro</run_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-chainer-pip</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-chainer-pip</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-fcn-pip</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-fcn-pip</exec_depend>
+  <exec_depend>jsk_2015_05_baxter_apc</exec_depend>
+  <exec_depend>jsk_2016_01_baxter_apc</exec_depend>
+  <exec_depend>jsk_arc2017_baxter</exec_depend>
+  <exec_depend>jsk_arc2017_common</exec_depend>
+  <exec_depend>jsk_data</exec_depend>
+  <exec_depend>jsk_recognition_msgs</exec_depend>
+  <exec_depend>roseus_smach</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
   <export>
   </export>
