--- a/jsk_2016_01_baxter_apc/package.xml
+++ b/jsk_2016_01_baxter_apc/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>jsk_2016_01_baxter_apc</name>
   <version>4.3.0</version>
   <description>Common stacks for Amazon Picking Challenge 2016</description>
@@ -36,29 +36,30 @@
   <build_depend>controller_manager</build_depend>
   <build_depend>dynamixel_msgs</build_depend>
 
-  <run_depend>baxter_core_msgs</run_depend>
-  <run_depend>baxter_gazebo</run_depend>
-  <run_depend>baxter_moveit_config</run_depend>
-  <run_depend>baxter_sim_controllers</run_depend>
-  <run_depend>baxter_sim_io</run_depend>
-  <run_depend>control_msgs</run_depend>
-  <run_depend>gazebo_ros</run_depend>
-  <run_depend>jsk_2015_05_baxter_apc</run_depend>
-  <run_depend>jsk_apc2016_common</run_depend>
-  <run_depend>jsk_baxter_startup</run_depend>
-  <run_depend>jsk_interactive_marker</run_depend>
-  <run_depend>jsk_recognition_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rosserial_python</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>jsk_data</run_depend>
-  <run_depend>dynamixel_controllers</run_depend>
-  <run_depend>hardware_interface</run_depend>
-  <run_depend>transmission_interface</run_depend>
-  <run_depend>controller_manager</run_depend>
-  <run_depend>dynamixel_msgs</run_depend>
+  <exec_depend>baxter_core_msgs</exec_depend>
+  <exec_depend>baxter_gazebo</exec_depend>
+  <exec_depend>baxter_moveit_config</exec_depend>
+  <exec_depend>baxter_sim_controllers</exec_depend>
+  <exec_depend>baxter_sim_io</exec_depend>
+  <exec_depend>control_msgs</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>jsk_2015_05_baxter_apc</exec_depend>
+  <exec_depend>jsk_apc2016_common</exec_depend>
+  <exec_depend>jsk_baxter_startup</exec_depend>
+  <exec_depend>jsk_interactive_marker</exec_depend>
+  <exec_depend>jsk_recognition_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>rosserial_python</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>jsk_data</exec_depend>
+  <exec_depend>dynamixel_controllers</exec_depend>
+  <exec_depend>hardware_interface</exec_depend>
+  <exec_depend>transmission_interface</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>dynamixel_msgs</exec_depend>
 
-  <test_depend>python-gdown-pip</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION==2">python-gdown-pip</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION==3">python3-gdown-pip</test_depend>
   <test_depend>rostest</test_depend>
   <test_depend>roslint</test_depend>
   <test_depend>jsk_tools</test_depend>
