--- a/jsk_arc2017_common/package.xml
+++ b/jsk_arc2017_common/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>jsk_arc2017_common</name>
   <version>4.3.0</version>
   <description>Common package for Amazon Robotics Challenge 2017 at JSK Lab.</description>
@@ -18,14 +18,15 @@
   <build_depend>message_generation</build_depend>
   <build_depend>roseus</build_depend>
 
-  <run_depend>jsk_apc2016_common</run_depend>
-  <run_depend>jsk_data</run_depend>
-  <run_depend>jsk_pcl_ros</run_depend>
-  <run_depend>jsk_pcl_ros_utils</run_depend>
-  <run_depend>jsk_perception</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>python-serial</run_depend>
-  <run_depend>rospy</run_depend>
+  <exec_depend>jsk_apc2016_common</exec_depend>
+  <exec_depend>jsk_data</exec_depend>
+  <exec_depend>jsk_pcl_ros</exec_depend>
+  <exec_depend>jsk_pcl_ros_utils</exec_depend>
+  <exec_depend>jsk_perception</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-serial</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-serial</exec_depend>
+  <exec_depend>rospy</exec_depend>
 
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
