fix typo in .github/workflows

--- a/.github/workflows/indigo.yaml
+++ b/.github/workflows/indigo.yaml
@@ -9,9 +9,9 @@ jobs:
     container: jskrobotics/ros-ubuntu:14.04
 
     steps:
-      - name: Install latest git ( use sudo for ros-ubuntu, remove sudo for ubntu container), checkout@v2 uses REST API for git<2.18, which removes .git folder and does not checkkout .travis submodules
+      - name: Install latest git (use sudo for ros-ubuntu, remove sudo for ubuntu container), checkout@v2 uses REST API for git<2.18, which removes .git folder and does not checkout .travis submodules
         run: sudo apt-get update && sudo apt-get install -y software-properties-common && sudo apt-get update && sudo add-apt-repository -y ppa:git-core/ppa && sudo apt-get update && sudo apt-get install -y git
-      - name: Before Checkout # need for actoins/checkout with ros-ubuntu container
+      - name: Before Checkout # need for actions/checkout with ros-ubuntu container
         run: sudo chown -R user:jenkins $RUNNER_WORKSPACE $HOME
       - name: Checkout
         uses: actions/checkout@v2
