--- a/.github/workflows/indigo.yaml
+++ b/.github/workflows/indigo.yaml
@@ -15,6 +15,15 @@ jobs:
         run: sudo chown -R user:jenkins $RUNNER_WORKSPACE $HOME
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache several data
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.ccache
+            ~/.cache/pip
+            ~/apt-cacher-ng
+            ~/.ros/data
+          key: ${{ github.workflow }}
       - name: Run jsk_travis
         uses: jsk-ros-pkg/jsk_travis@master
         with:
