--- a/.github/workflows/kinetic.yml
+++ b/.github/workflows/kinetic.yml
@@ -39,4 +39,4 @@ jobs:
           CATKIN_TOOLS_CONFIG_OPTIONS: "--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
           # instance_occlsegm and grasp_fusion are excluded because of gdrive download maximum trials.
           # see: https://github.com/start-jsk/jsk_apc/pull/2745
-          TEST_PKGS: "jsk_apc2015_common jsk_apc2016_common jsk_arc2017_common jsk_2015_05_baxter_apc jsk_2016_01_baxter_apc jsk_arc2017_baxter sphand_driver baxtergv6_apc2016"
+          TEST_PKGS: "jsk_apc2015_common jsk_apc2016_common jsk_arc2017_common jsk_2015_05_baxter_apc jsk_2016_01_baxter_apc jsk_arc2017_baxter sphand_driver baxtergv6_apc2016 baxter_paper_filing"
