--- a/demos/sphand_ros/sphand_driver/config/left_gripper_v7/dxl_controllers.yaml
+++ b/demos/sphand_ros/sphand_driver/config/left_gripper_v7/dxl_controllers.yaml
@@ -1,6 +1,6 @@
 prismatic_joint_controller:
   controller:
-    package: sphand_driver
+    package: dynamixel_controllers
     module: calib_required_joint_controller
     type: CalibRequiredJointController
   joint_name: left_gripper_prismatic_joint_motor
