--- a/jsk_arc2017_baxter/robots/right_gripper_v6/dxl_controllers.yaml
+++ b/jsk_arc2017_baxter/robots/right_gripper_v6/dxl_controllers.yaml
@@ -1,6 +1,6 @@
 prismatic_joint_controller:
   controller:
-    package: jsk_arc2017_baxter
+    package: dynamixel_controllers
     module: calib_required_joint_controller
     type: CalibRequiredJointController
   joint_name: right_gripper_prismatic_joint_motor
