--- a/demos/instance_occlsegm/ros/synthetic2d/package.xml
+++ b/demos/instance_occlsegm/ros/synthetic2d/package.xml
@@ -8,8 +8,8 @@
   <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
 
   <license>MIT</license>
-  <url type="repository">https://github.com/wkentaro/jsk_apc</url>
-  <url type="bugtracker">https://github.com/wkentaro/jsk_apc/issues</url>
+  <url type="repository">https://github.com/start-jsk/jsk_apc</url>
+  <url type="bugtracker">https://github.com/start-jsk/jsk_apc/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
