--- a/.github/workflows/noetic.yml
+++ b/.github/workflows/noetic.yml
@@ -15,10 +15,10 @@ jobs:
         run: |
           set -x
           export USER=$(whoami)
-          sudo git config --global --add safe.directory $GITHUB_WORKSPACE || echo "OK" # Show 'could not lock config file /github/home/.gitconfig: Permission denied', but it is ok
           sudo mkdir -p /__w/
           sudo chmod 777 -R /__w/
           sudo chown -R $USER $HOME
+          git config --global --add safe.directory $GITHUB_WORKSPACE || echo "OK" # Show 'could not lock config file /github/home/.gitconfig: Permission denied', but it is ok
       - name: Checkout
         uses: actions/checkout@v2
       # github actions cache does not work because of permission denied.
@@ -32,6 +32,10 @@ jobs:
       #       ~/apt-cacher-ng
       #       ~/.ros/data
       #     key: ${{ github.workflow }}
+      - name: work around permission issue again
+        run: |
+          set -x
+          grep path $GITHUB_WORKSPACE/.gitmodules | sed 's/.*=//' | xargs -n 1 -I '{}' git config --global --add safe.directory $GITHUB_WORKSPACE/'{}'
       - name: Run jsk_travis
         uses: jsk-ros-pkg/jsk_travis@master
         with:
