--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,15 @@ env:
     - >
       ROS_DISTRO=indigo
       BUILD_PKGS="jsk_apc2015_common jsk_apc2016_common jsk_arc2017_common jsk_2015_05_baxter_apc jsk_2016_01_baxter_apc jsk_arc2017_baxter selective_dualarm_stowing sphand_driver sphand_driver_msgs vl53l0x_mraa_ros baxtergv6_apc2016 baxter_paper_filing"
-      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0 scikit-learn==0.19.1'
+      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0 scikit-learn==0.19.1 protobuf==3.18.0'
       CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
     - >
       ROS_DISTRO=kinetic
-      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0'
+      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0 protobuf==3.18.0'
       CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop test_catkin_virtualenv test_catkin_virtualenv_py3_isolated test_catkin_virtualenv_inherited"
     - >
       ROS_DISTRO=melodic
-      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0'
+      BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==4.4.0 protobuf==3.18.0'
       CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
 matrix:
   allow_failures:
