install python for noetic

--- a/jsk_2015_05_baxter_apc/CMakeLists.txt
+++ b/jsk_2015_05_baxter_apc/CMakeLists.txt
@@ -214,10 +214,45 @@ install(DIRECTORY include/${PROJECT_NAME}/
 )
 
 install(DIRECTORY
-  config euslisp launch meshes node_scripts robots
+  config euslisp launch meshes robots
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   USE_SOURCE_PERMISSIONS
 )
+
+if($ENV{ROS_DISTRO} STREQUAL "indigo") # on noetic it needs catkin_install_python to support Python3 and it does not work on indigo for some reason...
+  install(DIRECTORY node_scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+  )
+  install(DIRECTORY scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+  )
+else()
+  install(DIRECTORY scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+          PATTERN "*"
+          PATTERN "*/*.py" EXCLUDE
+  )
+  install(DIRECTORY node_scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+          PATTERN "*"
+          PATTERN "*/*.py" EXCLUDE
+  )
+
+  file(GLOB SCRIPT_PROGRAMS scripts/*.py)
+  catkin_install_python(
+    PROGRAMS ${SCRIPT_PROGRAMS}
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts
+  )
+  file(GLOB SCRIPT_PROGRAMS node_scripts/*.py)
+  catkin_install_python(
+    PROGRAMS ${SCRIPT_PROGRAMS}
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/node_scripts
+  )
+endif()
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
