--- a/jsk_2016_01_baxter_apc/CMakeLists.txt
+++ b/jsk_2016_01_baxter_apc/CMakeLists.txt
@@ -229,10 +229,45 @@ add_custom_target(compile_stow_kiva_world ALL
 #############
 
 install(DIRECTORY
-  config euslisp launch meshes node_scripts robots
+  config euslisp launch meshes robots
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   USE_SOURCE_PERMISSIONS
 )
+
+if($ENV{ROS_DISTRO} STREQUAL "indigo") # on noetic it needs catkin_install_python to support Python3 and it does not work on indigo for some reason...
+  install(DIRECTORY node_scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+  )
+  install(DIRECTORY scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+  )
+else()
+  install(DIRECTORY scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+          PATTERN "*"
+          PATTERN "*/*.py" EXCLUDE
+  )
+  install(DIRECTORY node_scripts
+          DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+          USE_SOURCE_PERMISSIONS
+          PATTERN "*"
+          PATTERN "*/*.py" EXCLUDE
+  )
+
+  file(GLOB SCRIPT_PROGRAMS scripts/*.py)
+  catkin_install_python(
+    PROGRAMS ${SCRIPT_PROGRAMS}
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts
+  )
+  file(GLOB SCRIPT_PROGRAMS node_scripts/*.py)
+  catkin_install_python(
+    PROGRAMS ${SCRIPT_PROGRAMS}
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/node_scripts
+  )
+endif()
 
 #############
 ## Testing ##
