[CI] Update checkout to avoid permission error
See https://github.com/jsk-ros-pkg/jsk_robot/pull/1643

--- a/.github/workflows/indigo.yaml
+++ b/.github/workflows/indigo.yaml
@@ -20,7 +20,9 @@ jobs:
           sudo chown -R $USER $HOME
           git config --global --add safe.directory $GITHUB_WORKSPACE || echo "OK" # Show 'could not lock config file /github/home/.gitconfig: Permission denied', but it is ok
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3.0.2
+        with:
+          submodules: true
       # github actions cache does not work because of permission denied.
       # see: https://github.com/actions/cache/issues/404
       # - name: Cache several data
