[instance_occlsegm, grasp_fusion] Install Cython<3.0.0 to install Python2-compatible pycocotools (<=2.0.3)
https://github.com/cocodataset/cocoapi/issues/327 was solved because newer pycocotools including https://github.com/cocodataset/cocoapi/pull/86 is released from https://github.com/ppwwyyxx/cocoapi.
However, new issue (https://github.com/cython/cython/issues/5539) keeps us installing Cython explicitly.

--- a/demos/grasp_fusion/requirements.txt
+++ b/demos/grasp_fusion/requirements.txt
@@ -1,6 +1,10 @@
 chainer==6.7.0
 chainer-mask-rcnn>=0.5.13
 chainercv>=0.9.0
+# pycocotools is required implicitly (via chainer-mask-rcnn), and
+# Python2-compatible pycocotools (<=2.0.3) cannot be installed with Cython>=3.0.0.
+# See https://github.com/cython/cython/issues/5539.
+Cython<3.0.0
 fcn>=6.1.8
 filelock
 gdown
