Make code (test code at least) compatible to Python3

--- a/jsk_2016_01_baxter_apc/CMakeLists.txt
+++ b/jsk_2016_01_baxter_apc/CMakeLists.txt
@@ -288,7 +288,7 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(test/work_order.test)
   add_rostest(test/stow_work_order.test)
   add_rostest(test/apply_bin_contents_hint.test)
-  add_custom_target(download_test_data COMMAND ${PROJECT_SOURCE_DIR}/scripts/download_test_data.py)
+  add_custom_target(download_test_data COMMAND python$ENV{ROS_PYTHON_VERSION} ${PROJECT_SOURCE_DIR}/scripts/download_test_data.py)
   if(TARGET tests)
     add_dependencies(tests download_test_data)
   endif()
