[CI] Make BEFORE_SCRIPT of noetic travis the same as github actions

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ env:
       ROS_DISTRO=noetic
       # XXX: hotfix for chainer problem (https://github.com/chainer/chainer/issues/8545)
       # Use apt-version scipy and skimage which are compatible with apt-version numpy
-      BEFORE_SCRIPT='sudo apt-get install -y -q python3-scipy python3-skimage; sudo -H pip install chainer==6.7.0 gdown==4.4.0'
+      BEFORE_SCRIPT='sudo apt-get install -y -q python3-scipy python3-skimage; sudo -H pip3 install fcn chainercv chainer==6.7.0 gdown==4.4.0'
       CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
       ROSDEP_ADDITIONAL_OPTIONS="-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl --skip-keys=roseus_mongo --skip-keys=pr2_moveit_config --skip-keys=pr2_moveit_plugins --skip-keys=jsk_pr2_startup"
 matrix:
